# transactions-analysis

./: .flake8  README.md  pyproject.toml
data/: operations_empty.xls
src/: logger.py  main.py  reports.py  services.py  servises.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
